src/tests/krate/publish/snapshots/crates_io__tests__krate__publish__links__crate_with_links_field-2.snap
---
source: src/tests/krate/publish/links.rs
expression: response.json()
snapshot_kind: text
---
{
  "version": {
    "audit_actions": [
      {
        "action": "publish",
        "time": "[datetime]",
        "user": {
          "avatar": null,
          "id": 1,
          "login": "foo",
          "name": null,
          "url": "https://github.com/foo",
          "username": "foo"
        }
      }
    ],
    "bin_names": [],
    "checksum": "5631ca06d228e58274bbd8d6a3e81f7138a9e227a84bd63ecedb78afbc8144ea",
    "crate": "foo",
    "crate_size": 162,
    "created_at": "[datetime]",
    "description": "foo?!",
    "dl_path": "/api/v1/crates/foo/1.0.0/download",
    "documentation": null,
    "downloads": 0,
    "edition": null,
    "features": {},
    "has_lib": false,
    "homepage": null,
    "id": "[id]",
    "lib_links": "git2",
    "license": "MIT",
    "links": {
      "authors": "/api/v1/crates/foo/1.0.0/authors",
      "dependencies": "/api/v1/crates/foo/1.0.0/dependencies",
      "version_downloads": "/api/v1/crates/foo/1.0.0/downloads"
    },
    "num": "1.0.0",
    "published_by": {
      "avatar": null,
      "id": "[id]",
      "login": "foo",
      "name": null,
      "url": "https://github.com/foo",
      "username": "foo"
    },
    "readme_path": "/api/v1/crates/foo/1.0.0/readme",
    "repository": null,
    "rust_version": null,
    "updated_at": "[datetime]",
    "yank_message": null,
    "yanked": false
  }
}
